fix modal center alignment

--- a/src/components/ModalPost.css
+++ b/src/components/ModalPost.css
@@ -1,7 +1,3 @@
 .main-box {
-    left: 0;
-    right: 0;
-    top: 0;
-    bottom: 0;
-    margin: auto;
+    max-height: 90%;
 }
